crates/observed_macros_impl/tests/snapshots/expansion__an_event_requires_named_fields.snap
---
source: crates/observed_macros_impl/tests/expansion.rs
expression: "event_error(r#\"\"e\"\"#, \"#[info] struct Tuple(#[unredacted] i64);\")"
---
#[event] can only be applied to structs with named fields
