crates/observed_macros_impl/tests/snapshots/expansion__an_instrument_belongs_on_the_struct_not_on_the_field.snap
---
source: crates/observed_macros_impl/tests/expansion.rs
expression: "event_error(r#\"\"e\"\"#, \"struct Subject { #[counter] v: u64 }\")"
---
a metric instrument is a struct-level attribute; place it on the event struct and name this field positionally, e.g. `#[histogram(duration_ms)]`
